# Chewnpour

./: .gitignore  AGENTS.md  render.yaml  skills.md
.do/: app.scale-to-zero.yaml  app.yaml
.github/workflows/: production-alias.yml  qa.yml  staging-alias.yml
.venv-browser-use312/: pyvenv.cfg
datalab-oss-service/: .gitignore  README.md  pyproject.toml
datalab-oss-service/render_api/: __init__.py  app.py  extract_service.py
datalab-oss-service/scripts/: install_full_stack.sh
datalab-oss-service/tests/: test_extract_api_contract.py  test_extract_service_profiles.py
docling-service/: .dockerignore  Dockerfile  pyproject.toml
docling-service/render_api/: app.py
docling-service/tests/: test_render_api_docling.py
doctra-service/render_api/: app.py
doctra-service/tests/: test_render_api_docling.py
qa-results/: admin-negative-snapshot.md  course-main-snapshot.md  course-page-before-topic-click.md  course-page-snapshot.md  dashboard-snapshot.md  library-snapshot.md  objective-quiz-start-snapshot.md  owned-course-snapshot.md  owned-topic-snapshot.md  practice-mode-snapshot.md  processing-redirect-snapshot.md  report.md  topic-click-result-snapshot.md  topic-page-snapshot.md
skills/: exa-search  tavily-web
stitch-app/: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
stitch-app/api/: paystack-webhook.js  sentry-tunnel.js
stitch-app/config/: convex.public.json
stitch-app/convex/: admin.ts  adminTopics.ts  ai.ts  assignments.ts  auth.ts  authConfig.ts  campaignAttribution.ts  community.ts  concepts.ts  courseFolders.ts  courses.ts  crons.ts  devAuth.ts  emailHelpers.ts  emails.ts  examPreparations.ts  exams.ts  extraction.ts  extractionState.ts  feedback.ts  grounded.ts  http.ts  library.ts  llmUsage.ts  podcasts.ts  podcastsActions.ts  productResearch.ts  productResearchEmails.ts  profiles.ts  schema.ts  (+12 more)
tasks/: todo.md
(+553 files in other folders)
