[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docling-extract-service"
version = "0.1.0"
description = "FastAPI extraction adapter backed by Docling."
requires-python = ">=3.11,<3.14"
dependencies = [
    "docling",
    "fastapi>=0.115.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.2.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

